adding a doc with differences between Fizzygum and Morphic.js

--- a/versions/1.0.0/farm2017.html
+++ b/versions/1.0.0/farm2017.html
@@ -1,1 +1,3 @@
-<a href="./index.html">launch Fizzygum</a>
+<a href="./index.html">Launch Fizzygum</a>
+</br>
+<a href="./differences-fizzygum-morphicjs.html">Differences between Fizzygum and Morphic.js as of May 2017</a>
