updating the build on the website

--- a/versions/1.0.0/index.html
+++ b/versions/1.0.0/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Fizzygum</title>
 
-		<script type="text/javascript" src="js/zombie-kernel.js"></script>
+		<script type="text/javascript" src="js/fizzygum.js"></script>
 		<script type="text/javascript" src="js/libs/FileSaver.js"></script>
 		<script type="text/javascript" src="js/libs/jszip.min.js"></script>
 		<!-- coffee-script.js is used to compile all the coffeescript
