website changes, removing FARM references

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<a href="/versions/1.0.0/farm2017.html">FARM 2017 material</a>
+<a href="/versions/1.0.0/index.html">v1.0.0</a> (May 2017) / <a href="/versions/1.0.0/worldWithSystemTestHarness.html">tests</a>
+<hr>
+<a href="/differences-fizzygum-morphicjs.html">Differences between Fizzygum and Morphic.js</a>
