"coming soon" screenshot

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<p style="text-align:center;"><img src="images/Screen-Shot-2018-03-21.png" alt="Screenshot"></p>
+
 <a href="/versions/1.0.0/index.html">v1.0.0</a> (May 2017) / <a href="/versions/1.0.0/worldWithSystemTestHarness.html">tests</a>
 <hr>
 <a href="/differences-fizzygum-morphicjs.html">Differences between Fizzygum and Morphic.js</a>
